--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>Lauren McShea's GEOG 370 Page</h1>
     <a href=""><h2>Homework 1</h2></a>
     <a href="./hw2.html"><h2>Homework 2</h2></a>
+    <img width="500" src="./hw2map/mcsheahw1.png" alt="">
 </body>
 </html>
