--- a/Worldprojections/worldprojections.html
+++ b/Worldprojections/worldprojections.html
@@ -8,21 +8,55 @@
 <body>
     <h1>In this project I learned how to display images in different projections</h1>
     
-    <h2 style="color:red">Describe in your own words how you displayed the map in different projections using QGIS</h2>
-    <p>You can write a paragraph here</p>
+    <h2 style="color:red">Working with different projections for this assignment allowed me to become more familiar with the types of projections avalible and explore the uses of different geographic perspectives.</p>
     
     <h2>WGS84 Projection</h2>
-    <h3>Some observations</h3>
+    <h3>It could be argued that this projection is the most commonly recognizable or used projection of the world map. It has a flat surface with increasing size distortion shown at the top and bottom of the map.</h3>
     <a href=".//maps/4326.png">
     <img src=".//maps/4326.png" alt="WGS84" width='500px'>
     </a>
     <h2>Aitoff Projection</h2>
-    <h3>Some observations</h3>
+    <h3>Unlike the first projection, this projection is given curvature, representing the shaoe of the earth. Distortion is shown to follow the curvatures.</h3>
     <a href=".//maps/54043.png">
     <img src=".//maps/54043.png" alt="Aitoff" width='500px'>
     </a>
-    <h2 style="color:red">Now, you should <u>add the following projections on your own:</u></h2>
-    <h3>EPSG: 3857, 53018, 54034, 54027, 102016, and two additional projections that you choose.</h3>
+    <h2>Pseudo Mercator</h2>
+    <h3>This projection elogigated the map on a flat surface and shows some size distortion on the top and bottom of the map.</h3>
+    <a href="./maps/EPSG3857.png">
+    <img src="./maps/EPSG3857.png" alt="3857" width='500px'>
+    </a>
+    <h2>Sphere Winkle</h2>
+    <h3>This projection considers the curvature of the earth. </h3>
+    <a href="./maps/ESRI53018.png">
+    <img src="./maps/ESRI53018.png" alt="53018" width='500px'>
+    </a>
+    <h2>World Cylindrical Equal Area</h2>
+    <h3>This projection is like a cylinder unrolled into a 2D rectangle, causing the most distortion to occur at the top and bottom of the map. </h3>
+    <a href="./maps/ESRI54034.png">
+    <img src="./maps/ESRI54034.png" alt="54034" width='500px'>
+    </a>
+    <h2>World Equidistant Conic</h2>
+    <h3>This projection shows the earth from an aerial perspective, respective to the North Pole. </h3>
+    <a href="./maps/ESRI54027.png">
+    <img src="./maps/ESRI54027.png" alt="54027" width='500px'>
+    </a>
+    <h2>North Pole Equidistant Azimuthal</h2>
+    <h3>This projection is also shown from an aerial perpectivel, relitive to the norh pole. </h3>
+    <a href="./maps/ESRI102016.png">
+    <img src="./maps/ESRI102016.png" alt="102016" width='500px'>
+    </a>
+    <h2>South Pole Equdistant Azimutal</h2>
+    <h3>This projection is also shown from an aerial perpectivel, but relitive to the south pole </h3>
+    <a href="./maps/ESRI102019.png">
+    <img src="./maps/ESRI102019.png" alt="102019" width='500px'>
+    </a>
+    <h2>Sphere Equdistant Azimutal</h2>
+    <h3>This projection is this most unique so far. It has distortion wrapping around the poles as the projection is an azimuthal of a sphere. The distortion lines almost look like a cartoon basketball. </h3>
+    <a href="./maps/ESRI53032.png">
+    <img src="./maps/ESRI53032.png" alt="53032" width='500px'>
+    </a>
+    <h2 style="color:red"></u></h2>
+    <h3></h3>
     <p></p>
     <h2>Data used for this project</h2>
     <a href="https://www.naturalearthdata.com/http//www.naturalearthdata.com/download/10m/cultural/ne_10m_admin_0_countries.zip"> Download Natrual Earth 1:10m Cultural Vector </a>
