--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <a href=""><h2>Homework 1</h2></a>
     <a href="./hw2.html"><h2>Homework 2</h2></a>
     <a href="./Worldprojections/worldprojections.html"><h2>Homework 3 - World Projections</h2></a>
+    <a href="./test1png.png"><h2>practical</h2></a>
     <a href="./practical.html"><h2>practical</h2></a>
 </body>
 </html>
