--- a/practical.html
+++ b/practical.html
@@ -1,5 +1,5 @@
 <body>
-    <a href="./test1png.png"></a> 
+    <a href="./test1png.png"><h2>practical</h2></a>
 {
     "type": "FeatureCollection",
     "name": "Change1GEOJSON",
