--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
     <a href="./hw2.html"><h2>Homework 2</h2></a>
     <a href="./Worldprojections/worldprojections.html"><h2>Homework 3 - World Projections</h2></a>
     <a href="./practical.html"><h2>practical</h2></a>
+    <a href=""><h2>Homework 4</h2></a>
+    <a href=""><h2>Homework 5</h2></a>
+    <a href=""><h2>Homework 6</h2></a>
 </body>
 </html>
