--- a/practical.html
+++ b/practical.html
@@ -1,6 +1,6 @@
 <body>
-    <a href="./test1png.png"></a>
-    <a href="./Change1GEOJSON.geojson"></a>
-    <a href="./change2GEOJSON.geojson"></a>
-    <a href="./PointGEOJSON.geojson"></a>
+    <a href="./test1png.png">
+    <a href="./Change1GEOJSON.geojson">
+    <a href="./change2GEOJSON.geojson">
+    <a href="./PointGEOJSON.geojson">
 </body>
