--- a/practical.html
+++ b/practical.html
@@ -1,5 +1,5 @@
 <body>
-    <a href="./test1png.png">
+    <img width="500" src="./test1png.png" alt="">
     <a href="./Change1GEOJSON.geojson">
     <a href="./change2GEOJSON.geojson">
     <a href="./PointGEOJSON.geojson">
