--- a/practical.html
+++ b/practical.html
@@ -1,4 +1,5 @@
 <body>
+    <h1>Test 1 Practical Section</h1>
     <img width="500" src="./test1png.png" alt="">
     <a href="./Change1GEOJSON.geojson">
     <a href="./change2GEOJSON.geojson">
