--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <a href=""><h2>Homework 1</h2></a>
     <a href="./hw2.html"><h2>Homework 2</h2></a>
     <a href="./Worldprojections/worldprojections.html"><h2>Homework 3 - World Projections</h2></a>
-    <a href=""><h2>Homework 4</h2></a>
+    <a href="./hw4/Homework4.html"><h2>Homework 4</h2></a>
     <a href=""><h2>Homework 5</h2></a>
     <a href="./practical.html"><h2>practical</h2></a>
     <a href=""><h2>Homework 6</h2></a>
