--- a/Hw5/index2.html
+++ b/Hw5/index2.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <a href="./hw5folder/Homework5.html"><h2>Tile map</h2></a>
-    <a href="./hw5folder/Homework5.html"><h2>Control Points</h2></a>
+    <a href="./hw5folder/hw5gcp.points"><h2>Control Points</h2></a>
 </body>
 </html>
