--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
     <a href="./hw4/Homework4.html"><h2>Homework 4</h2></a>
     <a href="./Hw5/index2.html"><h2>Homework 5</h2></a>
     <a href="./practical.html"><h2>practical</h2></a>
-    <a href=""><h2>Homework 6</h2></a>
+    <a href="./Hw6/hw6_template.html"><h2>Homework 6</h2></a>
 </body>
 </html>
