--- a/Hw6/hw6_template.html
+++ b/Hw6/hw6_template.html
@@ -18,6 +18,7 @@
     <a href="./ACSST5Y2021.S1901-Data.csv"> CSV dataset </a>
     <p></p>
     <a href="./tl_2018_tn_county.shp"> Link to shapefile </a>
+    <a href="./Homework6vectorfile.geojson"> Link to vector file as a geojson</a>
 
 </body>
 </html>
