--- a/Hw5/index2.html
+++ b/Hw5/index2.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     
-    <h1>Homework 5: Georeference a historical image from USGS Earth Explorer and share as webmap </h1>
+    <h1>Homework 5: Georeference a historical image from USGS Earth Explorer and share as a webmap </h1>
     <a href="./hw5folder/Homework5.html"><h2>Tile map</h2></a>
     <a href="./hw5folder/hw5gcp.points"><h2>Control Points</h2></a>
 </body>
