--- a/hw4/Homework4.html
+++ b/hw4/Homework4.html
@@ -24,6 +24,8 @@
   </style>
 </head>
 <body>
+  <h1>Homework 4 </h1>
+    <a href="./hw4controlpoints.points"><h2>Control points</h2></a>
   <div id="map"></div>
   <script>
       var map = L.map('map', { attributionControl: false } ).setView([35.90265729305691, -79.04711525096982], 14.0);
