--- a/Hw6/hw6_template.html
+++ b/Hw6/hw6_template.html
@@ -15,11 +15,11 @@
 
 <!-- Link to your shapefile in Github and you CSV -->
 <h2>Data used for this project:</h2>
-    <a href="./ACSST5Y2021.S1901-Data.csv"> CSV dataset </a>
+    <a href="https://github.com/laurenmcshea/370geog/blob/main/Hw6/ACSST5Y2021.S1901-Data.csv"> CSV dataset </a>
     <p></p>
     <a href="./tl_2018_tn_county.shp"> Link to shapefile </a>
     <p></p>
-    <a href="./Homework6vectorfile.geojson"> Link to vector file as geojson</a>
+    <a href="https://github.com/laurenmcshea/370geog/blob/main/Hw6/Homework6vectorfile.geojson"> Link to vector file as geojson</a>
 
 </body>
 </html>
