--- a/hw4/Homework4.html
+++ b/hw4/Homework4.html
@@ -25,7 +25,7 @@
 </head>
 <body>
   <h1>Homework 4 </h1>
-    <a href="./hw4controlpoints.points"><h2>Control points</h2></a>
+    <a href="https://raw.githubusercontent.com/laurenmcshea/370geog/main/hw4/hw4controlpoints.points"><h2>Control points</h2></a>
   <div id="map"></div>
   <script>
       var map = L.map('map', { attributionControl: false } ).setView([35.90265729305691, -79.04711525096982], 14.0);
