--- a/practical.html
+++ b/practical.html
@@ -1,11 +1,11 @@
 <body>
     <h1>Test 1 Practical Section</h1>
-    <img width="500" src="./test1png.png" alt="">
+    <img width="500" src="./test1png.png" alt="map image">
     </a>
-    <a href="./Change1GEOJSON.geojson">
+    <a href="./Change1GEOJSON.geojson"> Link to Change 1 GEOJSON </a>
     </a>
-    <a href="./change2GEOJSON.geojson">
+    <a href="./change2GEOJSON.geojson"> Link to Change 2 GEOJSON </a>
     </a>
-    <a href="./PointGEOJSON.geojson">
+    <a href="./PointGEOJSON.geojson"> Link to Airport point GEOJSON </a>
     </a>
 </body>
