--- a/practical.html
+++ b/practical.html
@@ -2,10 +2,12 @@
     <h1>Test 1 Practical Section</h1>
     <img width="500" src="./test1png.png" alt="map image">
     </a>
-    <a href="./Change1GEOJSON.geojson"> Link to Change 1 GEOJSON </a>
+    <a href="https://github.com/laurenmcshea/370geog/blob/main/Test1Change1.geojson"> Link to Change 1 GEOJSON </a>
     </a>
-    <a href="./change2GEOJSON.geojson"> Link to Change 2 GEOJSON </a>
+
+    <a href="https://github.com/laurenmcshea/370geog/blob/main/Test1Change2.geojson"> Link to Change 2 GEOJSON </a>
     </a>
-    <a href="./PointGEOJSON.geojson"> Link to Airport point GEOJSON </a>
+
+    <a href="https://github.com/laurenmcshea/370geog/blob/main/Test1Point.geojson"> Link to Airport point GEOJSON </a>
     </a>
 </body>
