--- a/practical.html
+++ b/practical.html
@@ -1,13 +1,14 @@
 <body>
     <h1>Test 1 Practical Section</h1>
-    <img width="500" src="./test1png.png" alt="map image">
+    <img width="500" src="./test1map.png" alt="map image">
     </a>
+    <p></p>
     <a href="https://github.com/laurenmcshea/370geog/blob/main/Test1Change1.geojson"> Link to Change 1 GEOJSON </a>
     </a>
-
+    <p></p>
     <a href="https://github.com/laurenmcshea/370geog/blob/main/Test1Change2.geojson"> Link to Change 2 GEOJSON </a>
     </a>
-
+    <p></p>
     <a href="https://github.com/laurenmcshea/370geog/blob/main/Test1Point.geojson"> Link to Airport point GEOJSON </a>
     </a>
 </body>
