--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
     <a href="./Hw5/index2.html"><h2>Homework 5</h2></a>
     <a href="./practical.html"><h2>practical</h2></a>
     <a href="./Hw6/hw6_template.html"><h2>Homework 6</h2></a>
+    <a href="./Hw6.2/hw6.2_template.html"><h2>Homework 6.2</h2></a>
 </body>
 </html>
