--- a/Hw6.2/hw6.2_template.html
+++ b/Hw6.2/hw6.2_template.html
@@ -9,18 +9,21 @@
 <h1>Homework 6.2: Census data ratios and categories </h1>
 <h2>Lauren McShea</h2>
 <h3>My maps depict the average household incomes per county compaired to the average household income for the state of Tennessee for the year 2018. The darker green represents the highest grossing counties, while the white represents the lowest income counties. By using a ratio that compares the average household income of each county to the overall average income fo the state, economic disproportion specific to the state of Tennessee is better shown. For this set of choropleths, the ratio gives more context to the data. Each map shows a different method of data categorization.</h3>
-<a href="./6.2 Quantiles.png">
+<a href="./6.2 Quantiles.png"><h2>Equal Count (Quantiles) Categorization</h2></a>
     <img src="./6.2 Quantiles.png" alt="map" width='500px'>
-    </a>
+    <h2>The Equal Count or Quantile method of Categorization ensures no one class is overrepresented in the choropleth; however, because this data set is extremely skewed to one side the quantile method miss represnts the concentration of wealth in certain counties. 
 
-<a href="./6.2 Equal Intervals.png">
+<a href="./6.2 Equal Intervals.png"><h2>Equal Intervals Categorization</h2></a>
     <img src="./6.2 Equal Intervals.png" alt="map" width='500px'>
+    <h2>The Equal Interval Categorization method better depicts areas of wealth concentration for the state than the quantile method. This method however, creates classes of widely varying ranges. For this map it means counties with average household incomes 7% of the state average are grouped together with counties that have average household incomes 259% of the state average. Although this method shows the large skew with 5 classes, it would better represent the economic diversity of the state if it was used with more classes</h2></a>
     </a>
 
-<a href="./6.2 Natural Breaks Categorization.png">
+<a href="./6.2 Natural Breaks Categorization.png"><h2>Natural Breaks Categorization</h2></a>
     <img src="./6.2 Natural Breaks Categorization.png" alt="map" width='500px'>
-    </a>
-<h2>Data used for this project:</h2>
+    <h2>The Natural Breaks Categorization method reveals natural breaks and clusters in the data set, it is able to represent the skew in the data like the equal interval method but better represents the economic diversity bewteen classes without overrepresenting the classes with fewer data points like the quantiles method. This method, however could also benefit from an increased number of classes that would allow it to better represent the data.</h2></a>
+   </a>
+
+    <h2>Data used for this project:</h2>
     <a href="https://github.com/laurenmcshea/370geog/blob/main/Hw6.2/ACSST5Y2021.S1901_2023-10-05T212755 2/ACSST5Y2021.S1901-Data.csv"> CSV dataset </a>
     <p></p>
 
