--- a/Hw7/hw7.html
+++ b/Hw7/hw7.html
@@ -15,6 +15,8 @@
 <h2>Data used for this project:</h2>
         <a href="https://github.com/laurenmcshea/370geog/blob/main/Hw7/hw7csvdata.csv"> CSV dataset </a>
         <p></p>
+        <a href="https://linc.osbm.nc.gov/explore/dataset/state-comparisons-environment-recreation-and-resources/table/?disjunctive.area_name&disjunctive.year&disjunctive.variable"> Link to data source </a>
+        <p></p>
         <a href="https://github.com/laurenmcshea/370geog/blob/main/Hw7/Hw7GeoJSON.geojson"> Link to vector file as geojson</a>
     
 </body>
