--- a/Hw7/hw7.html
+++ b/Hw7/hw7.html
@@ -8,10 +8,10 @@
 <body>
 <h1>Homework 7: Choropleth map </h1>
 <h2>Lauren McShea</h2>
-<h3>My maps depict the carbon diozide emmision per state for the year 2020.</h3>
+
 <a href="./Homework7.png"><h2>Carbon Dioxide Emmisions Choropleth</h2></a>
     <img src="./Homework7.png" alt="map" width='500px'>
-    
+    <h3>This map depicts the carbon diozide emmision per state for the year 2020. I chose to focus on this topic in my choropleth because the visualization of the data makes it easier to understand the disproportionate carbon dioxide emmisions around the United States. </h3>
 <h2>Data used for this project:</h2>
     <a href="https://github.com/laurenmcshea/370geog/blob/main/Hw7/hw7csvdata.csv"> CSV dataset </a>
     <p></p>
