--- a/hw8/hw8.html
+++ b/hw8/hw8.html
@@ -9,15 +9,14 @@
 <h1>Homework 8: Geoprocessing Analysis </h1>
 <h2>Lauren McShea</h2>
 
-<a href="map png"><h2>map name</h2></a>
-    <img src="map png" alt="map" width='500px'>
+<a href="./Homework 8.png"><h2>map name</h2></a>
+    <img src="./Homework 8.png" alt="map" width='500px'>
     <h3> </h3>
 <h2>Data used for this project:</h2>
-    <a href="data "> CSV dataset </a>
+    <a href="https://droughtmonitor.unl.edu/Maps/CompareTwoWeeks.aspx"> U.S. Drought Monitor  </a>
     <p></p>
-    <a href="data "> Link to data source </a>
+    <a href="https://hub.arcgis.com/datasets/esri::usa-major-cities/explore"> Arc GIS Metropolitan Data</a>
     <p></p>
-    <a href="data "> Link to vector file as geojson</a>
-    
+    <a href="./Hw8newdata.geojson"> New data as a Geojson </a>
 </body>
 </html>
