--- a/hw8/hw8.html
+++ b/hw8/hw8.html
@@ -8,7 +8,7 @@
 <body>
 <h1>Homework 8: Geoprocessing Analysis </h1>
 <h2>Lauren McShea</h2>
-
+<h3>My map depicts the level of drought currently experienced by major metropolian areas in the continental United States. This map was created be using the geoprossesing tool, buffer to create a layer of metropolitan areas surrounding major US cities. This layer was then overlayed with current US Drought Monitor data and the geoprossesing tool, intersect, was used to respresent the overlap in datasets.  </h3>
 <a href="./Homework 8.png"><h2>map name</h2></a>
     <img src="./Homework 8.png" alt="map" width='500px'>
     <h3> </h3>
