--- a/hw8/hw8.html
+++ b/hw8/hw8.html
@@ -17,6 +17,6 @@
     <p></p>
     <a href="https://hub.arcgis.com/datasets/esri::usa-major-cities/explore"> Arc GIS Metropolitan Data</a>
     <p></p>
-    <a href="./Hw8newdata.geojson"> New data as a Geojson </a>
+    <a href="https://github.com/laurenmcshea/370geog/blob/main/hw8/Hw8newdata.geojson"> New data as a Geojson </a>
 </body>
 </html>
